--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "vercel-build": "npm ci && npm run build",
+    "vercel-build": "npm ci && npm run build"
   },
   "dependencies": {
     "chart.js": "^4.5.1",
